# botgame

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  devserver.sh  index.html  launch_game.bat  launch_game.sh  package_windows.sh  playtest_notes.txt  todos
assets/: config1.json  config2.json
assets/decks/: Gigablaster.deck  Shrapnel.deck
fonts/scripts/: merge_fonts.py  merge_noto.py  substitute_linemetrics.py
src/: lib.rs  logging.rs  macros.rs  main.rs  utils.rs
src/cards/: deck.rs  generator.rs  mesh.rs  mod.rs  price.rs  text.rs
src/cards_v1/: deck.rs  generator.rs  mesh.rs  mod.rs  price.rs  removed.rs  text.rs
src/cards_v2/: deck.rs  mod.rs
src/match_sim/: events.rs  mod.rs  server.rs
src/network/: client.rs  messages.rs  mod.rs  server.rs
src/ui/: button.rs  deckbuilding.rs  font.rs  game_scene.rs  main_menu.rs  mod.rs
src/ui/game_scene/: mod.rs  targeting.rs
