[package]
name = "botgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default= ["bevy_dylib"]
bevy_dylib=["bevy/dynamic_linking"]

[dependencies]
aery = "0.5.2"
bevy = "0.12"
bevy-inspector-egui = "0.22.1"
bevy_mod_index = "0.3.0"
bevy_renet = "0.0.10"
bincode = "1.3.3"
extension-trait = "1.0.2"
serde = "1.0.195"
wasm-bindgen = "0.2.89"

#[patch.crates-io]
#bevy = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_ecs = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_derive = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_app = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_hierarchy = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_log = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_utils = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
