[package]
name = "botgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default= ["bevy_dylib"]
bevy_dylib=["bevy/dynamic_linking"]
trace=["bevy/trace_chrome", "tracing-chrome"]

[dependencies]
bevy = "0.13"

bevy_mod_index = "0.4.0"

bevy-inspector-egui = "0.23"

bevy_framepace = "0.15"
#bevy_mod_picking = { version="0.17.0", default-features=false, features = [ "backend_raycast", "backend_bevy_ui", "backend_egui", "selection" ]  }
bevy_mod_picking = { git="https://github.com/StrikeForceZero/bevy_mod_picking.git", branch="bevy-0.13", default-features=false, features = [ "backend_raycast", "backend_bevy_ui", "backend_egui", "selection" ]  }
bevy_eventlistener = "0.7"

bevy_renet = "0.0.11"

rand="0.8.5"
bincode = "1.3.3"
extension-trait = "1.0.2"
serde = "1.0.195"
serde_json = "1.0.113"
wasm-bindgen = "0.2.89"

tracing-chrome = {optional=true, version="0.7"}

#[patch.crates-io]
#bevy = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_ecs = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_derive = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_app = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_hierarchy = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_log = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
#bevy_utils = { git="https://github.com/bevyengine/bevy.git", rev="ee9a150" }
